Centered the theme

--- a/about/index.html
+++ b/about/index.html
@@ -69,7 +69,7 @@ This theme is pretty basic and covers all of the essentials. All you have to do 
 <body class="blue">
 
 
-<div class="container headings--one-size">
+<div class="container center headings--one-size">
 
   <header class="header">
   <div class="header__inner">
